Issue #2173817 by Diane Bryan: Side menu overlaps site rather than dove-tailing

--- a/css/panopoly.css
+++ b/css/panopoly.css
@@ -555,8 +555,3 @@ a#navbar-link-admin-apps.active:before {
 #navbar-administration .edit-shortcuts {
   display: none;
 }
-
-.drupal-navbar .navbar-tray-vertical,
-.drupal-navbar .navbar-tray-vertical > .navbar-lining:before {
-  min-width: 225px;
-}
